further edits on SPKs

--- a/zklang/HL-buildingblocks.tex
+++ b/zklang/HL-buildingblocks.tex
@@ -41,7 +41,7 @@ hiding the protocols realization details.
 
 
 
-\subsection{CL Signatures}
+\subsection{Realization of Credential $\operatorname{Credential}$ - CL Signatures}
 A credential will take the form of a signature created by an issuer. 
 As we want to prove knowledge of credentials, we need ``signatures with efficient protocols'', also called CL signatures~\cite{camlys02b}. 
 Examples are the RSA-based CL signature~\cite{camlys02b}, the pairing-based CL signature~\cite{camlys04},
