--- a/zklang/preamble.tex
+++ b/zklang/preamble.tex
@@ -132,7 +132,7 @@
 \newcommand{\serializelist}{\textsf{List}\xspace}
 \newcommand{\intToBytes}{\textsf{int2B}\xspace}
 \newcommand{\stringToBytes}{\textsf{Str2B}\xspace}
-\newcommand{\NIZK}{\operatorname{NIZK}}
+\newcommand{\NIZK}{\operatorname{ZKL}}
 
 
 
