add missing word
Signed-off-by: Lovesh <lovesh.harchandani@evernym.com>

--- a/zklang/ZKL-statements.tex
+++ b/zklang/ZKL-statements.tex
@@ -65,7 +65,7 @@ Explanations of stuff
 Pseudonyms are always bound to a user secret key, credentials can be bound to a user secret key.
 Commitments might also contain a secret key.
 
-If in a composed statement the ownership several pseudonyms, commitments, and credentials are proved,
+If in a composed statement the ownership of several pseudonyms, commitments and credentials are proved,
 they must be related to the same secret key. 
 Thus, secret keys cannot be mixed and matched.
 
