changed claim to credential

--- a/zklang/ZKLangSpecification.tex
+++ b/zklang/ZKLangSpecification.tex
@@ -351,7 +351,7 @@
 
 
 % Title
-\title{VC-ZKLang\\  \large Specification of Privacy-Enhancing Implementation of Verifiable Claims}
+\title{VC-ZKLang\\  \large Specification of Privacy-Enhancing Implementation of Verifiable Credentials}
 
 % Authors
 \author{Jan Camenisch \and Manu Drijvers \and ?}
@@ -363,7 +363,7 @@
 %\input{0_abstract}
 \begin{abstract}
 This document specifies an language that allow one to describe the cryptographic protocols
-that will generate a cryptographic token as a witness to a verifiable claim.
+that will generate a cryptographic token as a witness to a verifiable credential.
 The cryptographic protocol that will then be executed from this specification should be (but need not be) 
 such that the token is not linkable to the credentials on which it is based.
 \end{abstract}
