--- a/zklang/main.tex
+++ b/zklang/main.tex
@@ -47,7 +47,7 @@ TODO: Both Evernym and IBM
 %(statements}
 
 
-\section{Mapping Verifiable Claims to ZKLang}
+\section{Mapping Verifiable Credentials to ZKLang}
 TODO: Evernym
 \subsection{Mapping the different types to integers}
 TODO: IBM
