--- a/zklang/ZKL-statements.tex
+++ b/zklang/ZKL-statements.tex
@@ -8,14 +8,14 @@
 At this level, all message $m_i$ are integers.
 Terms that the language supports are the following ones.
 \begin{align}
-&\NIZK\lbrace(m_i)_{i\in h}[m]_{i\not\in h}: \operatorname{Credential}( \mathit{issuer\_public\_key}, m_1, m_2, m_3) \rbrace\\
-&\NIZK\lbrace(): \operatorname{Nym}( \emph{nym}) \rbrace\\
-&\NIZK\lbrace(): \operatorname{SNym}( \emph{nym}, \mathit{scope}) \rbrace\\
-&\NIZK\lbrace(m): \operatorname{Enc}( \emph{epk}, m, \mathit{ctxt}) \rbrace\\
-&\NIZK\lbrace(m): \operatorname{Larger}(m, c) \rbrace\\
-&\NIZK\lbrace(m): \operatorname{Smaller}(m, c) \rbrace \\
-&\NIZK\lbrace(m): \operatorname{Member}(m, c) \rbrace \\
-&\NIZK\lbrace(m): \operatorname{Com}(m1, m_2, c) \rbrace
+&\NIZK\lbrace(m_{i\in h})[m_{i\not\in h},\mathit{ipk},]: \operatorname{Credential}( \mathit{ipk}, m_1, m_2, \ldots, m_n) \rbrace\\
+&\NIZK\lbrace()[\emph{nym}]: \operatorname{Nym}( \emph{nym}) \rbrace\\
+&\NIZK\lbrace()[\emph{nym},\mathit{scope}]: \operatorname{SNym}( \emph{nym}, \mathit{scope}) \rbrace\\
+&\NIZK\lbrace(m)[\emph{epk},\mathit{ctxt}]: \operatorname{Enc}( \emph{epk}, m, \mathit{ctxt}) \rbrace\\
+&\NIZK\lbrace(m)[c]: \operatorname{Larger}(m, c) \rbrace\\
+&\NIZK\lbrace(m)[c]: \operatorname{Smaller}(m, c) \rbrace \\
+&\NIZK\lbrace(m)[c]: \operatorname{Member}(m, c) \rbrace \\
+&\NIZK\lbrace(m_{i\in h})[m_{i\not\in h},c]: \operatorname{Com}(m1, m_2, c) \rbrace
 \end{align}
 
 \paragraph{Credential $\operatorname{Credential}$.}
