--- a/zklang/HL-buildingblocks.tex
+++ b/zklang/HL-buildingblocks.tex
@@ -16,7 +16,7 @@ To describe these protocols, we use  notation introduced by Camenisch and
 Stadler~\cite{camsta97b} for various proofs of knowledge of discrete
 logarithms and proofs of the validity of statements about discrete logarithms.
 For instance,
-\[\textit{PK}
+\[\textit{SPK}
 \{ (\alpha,\beta,\gamma): y = g^\alpha h^\beta \ \wedge \ \tilde{y} =
 \tilde{g}^\alpha \tilde{h}^\gamma \ \wedge \ ( v < \alpha < u) \}
 \]
